package kr.kro.airbob.domain.commoncode.entity;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import kr.kro.airbob.common.domain.BaseEntity;
import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.experimental.SuperBuilder;

/**
 * 공통 코드 그룹 정의. PK = 자연키 group_code
 */
@Entity
@Table(name = "common_code_group")
@Getter
@SuperBuilder
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@NoArgsConstructor(access = AccessLevel.PROTECTED)
public class CommonCodeGroup extends BaseEntity {

	@Id
	@Column(name = "group_code", length = 50)
	private String groupCode;

	@Column(name = "group_name", nullable = false, length = 100)
	private String groupName;

	@Column(length = 255)
	private String description;

	@Column(name = "is_active", nullable = false)
	private boolean active;

	public void updateDisplay(String groupName, String description, Boolean active) {
		if (groupName != null) {
			this.groupName = groupName;
		}
		if (description != null) {
			this.description = description;
		}
		if (active != null) {
			this.active = active;
		}
	}
}
